# gcpwn

./: .gitignore  CONTRIBUTING.md  DataController.py  Dockerfile  LICENSE  MANIFEST.in  README.md  UtilityController.py  WorkspaceConfig.py  main.py  module_actions.py  pyproject.toml  requirements.txt  session.py  setup.sh  workspace_instructions.py
.github/: dependabot.yml
.github/workflows/: build_release.yml  ci.yml  publish.yml
Modules/CloudCompute/Enumeration/: enum_compute_projects.py  enum_instances.py
Modules/CloudCompute/Exploit/: exploit_instance_setiampolicy.py  exploit_instance_ssh_keys.py  exploit_instance_startup_script.py
Modules/CloudCompute/utils/: util_helpers.py  zones.txt
Modules/CloudFunctions/Enumeration/: enum_functions.py
Modules/CloudFunctions/Exploit/: exploit_functions_invoke.py  exploit_functions_setiampolicy.py
Modules/CloudFunctions/Unauthenticated/: unauth_functionbrute.py
Modules/CloudFunctions/utils/: regions_v1.txt  regions_v2.txt  util_helpers.py
Modules/CloudSourceRepository/Enumeration/: enum_repos.py
Modules/CloudSourceRepository/Exfiltrate/: download_repos.py
Modules/CloudStorage/Enumeration/: enum_buckets.py  enum_hmac_keys.py
Modules/CloudStorage/Exploit/: exploit_bucket_upload.py  exploit_storage_hmac.py  exploit_storage_setiampolicy.py
Modules/CloudStorage/Unauthenticated/: README.md  unauth_bucketbrute.py
Modules/CloudStorage/utils/: gcpbucketbrute_permutations.txt  top_level_domains.txt  util_helpers.py
Modules/Everything/Enumeration/: enum_all.py
Modules/Everything/Process/: analyze_vulns.py  generate_graph.py  process_iam_bindings.py
Modules/Everything/utils/: util_helpers.py
Modules/IAM/Enumeration/: enum_custom_roles.py  enum_policy_bindings.py  enum_service_accounts.py
Modules/IAM/Exploit/: exploit_generate_access_token.py  exploit_service_account_keys.py
Modules/IAM/utils/: util_helpers.py
Modules/MemoryStore/Enumeration/: enum_redis.py
Modules/MemoryStore/utils/: util_helpers.py
Modules/ResourceManager/Enumeration/: enum_resources.py
Modules/ResourceManager/Exploit/: exploit_folder_setiampolicy.py  exploit_organization_setiampolicy.py  exploit_project_setiampolicy.py
Modules/ResourceManager/utils/: all_folder_permissions.txt  all_organization_permissions.txt  all_project_permissions.txt  general_folder_permissions.txt  general_organization_permissions.txt  util_helpers.py
Modules/SecretsManager/Enumeration/: enum_secrets.py
Modules/SecretsManager/Exploit/: exploit_secrets_setiampolicy.py
Modules/SecretsManager/utils/: locations.txt  util_helpers.py
Modules/StorageTransfer/Enumeration/: enum_transfer_jobs.py
Modules/StorageTransfer/utils/: util_helpers.py
gcpwn/cli/: main.py  module_actions.py  workspace_instructions.py
gcpwn/core/: action_schema.py  config.py  console.py  db.py  output_paths.py  resource.py  session.py
gcpwn/core/utils/: action_recording.py  enum_framework.py  exploit_helpers.py  hierarchy.py  iam_permissions.py  iam_principals.py  iam_simplifier.py  module_helpers.py  parallel_output.py  persistence.py  resume.py  scoped_session.py  serialization.py  service_runtime.py
gcpwn/mappings/: database_info.json  module-mappings.json  module_mappings.json  og_permission_to_roles_map.json  og_privilege_escalation_paths.json  og_service_agent_patterns.json  service_locations.txt
gcpwn/modules/: __init__.py
gcpwn/modules/everything/: __init__.py
gcpwn/modules/workspace/: README.md  common.py
scripts/: build_predfined_perm_to_role_input.txt
tests/module_contracts/: test_module_contracts.py  test_no_service_iam_enum_modules.py
tests/unit/: README.md
tests/unit/cli/: test_drive_through.py  test_module_actions_policy.py
tests/unit/cloudcompute/: test_gapic_base.py
tests/unit/core/: test_db_action_merge.py  test_enum_framework.py  test_exploit_helpers.py  test_hierarchy_render.py  test_key_db_thread_safety.py  test_key_db_transaction.py  test_key_parallel_foundations.py  test_key_resource_base.py  test_key_save_upsert.py  test_key_select_rows_parameterization.py  (+5 more)
utils/: database_info.yaml  module-mappings.yaml  permission-mapping.yaml  resource_perm_mappings.txt
(+221 files in other folders)
