[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "gcpwn"
version = "0.5.3"
description = "GCP offensive assessment and enumeration framework."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "NetSPI" }
]
dynamic = ["dependencies"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0"
]
table = [
  "prettytable==3.18.0"
]
excel = [
  "xlsxwriter==3.2.9"
]

[project.scripts]
gcpwn = "gcpwn.cli.main:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"gcpwn" = [
  "mappings/*.json",
  "mappings/*.txt",
  "modules/*/utilities/data/*.txt",
  "modules/*/utilities/data/*.zip",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gcpwn*"]
namespaces = true
